--- a/S169954Mappe1-master/app/src/main/res/values-de/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-de/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Hangman</string>
-    <string name="action_settings">Settings</string>
-    <string name="se_regler">Se Regler</string>
-    <string name="start_spill">Start Spill</string>
-    <string name="reglene">Hangman er et spill for to personer. Det spilles ved hjelp av et papirark og en blyant. Den ene spilleren tenker på et ord (eller uttrykk), og den andre forsøker å finne frem til ordet ved å foreslå bokstaver.Ordet man skal forsøke å gjette seg frem til, angis med en rad med streker, der hver strek angir én bokstav. Hvis spilleren som gjetter foreslår en bokstav som finnes i ordet, skriver den andre spilleren denne bokstaven i alle de riktige posisjonene. Hvis bokstaven som foreslås ikke er med i ordet, tegner den andre spilleren ett av elementene i Hangman-diagrammet. -Wikipedia</string>
-    <string name="endre_spraak">Endre Språk</string>
-    <string name="avslutt_spill">Avslutt</string>
+    <string name="app_name">Galgenmännchen</string>
+    <string name="action_settings">Einstellungen</string>
+    <string name="se_regler">Siehe Regeln</string>
+    <string name="start_spill">Spiel Beginnen</string>
+    <string name="reglene">Hangman ist ein Spiel für zwei Personen. Es wird mit einem Blatt Papier und einem Bleistift gespielt. Ein Spieler denkt an ein Wort (oder Satz) und der andere versucht, das Wort der Eingabe bokstaver.Ordet sollte man versuchen zu erraten, die Einstellung wird durch eine Reihe von Strichen dargestellt zu finden, jeder Balken zeigt ein Buchstabe. Wenn der Spieler, der errät vorschlagen, einen Brief, in dem Wort ist, geben Sie das zweite Spieler diesen Brief an den richtigen Positionen. Wenn die vorgeschlagene Buchstaben sind nicht in Worten, ziehen die anderen Spieler eines der Elemente in Hangman Diagramm. -Wikipedia</string>
+    <string name="endre_spraak">Sprache Ändern</string>
+    <string name="avslutt_spill">Abschluss</string>
 </resources>
