--- a/S169954Mappe1-master/app/src/main/res/values-en/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-en/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Hangman</string>
     <string name="action_settings">Settings</string>
-    <string name="se_regler">Se Regler</string>
-    <string name="start_spill">Start Spill</string>
-    <string name="reglene">Hangman er et spill for to personer. Det spilles ved hjelp av et papirark og en blyant. Den ene spilleren tenker på et ord (eller uttrykk), og den andre forsøker å finne frem til ordet ved å foreslå bokstaver.Ordet man skal forsøke å gjette seg frem til, angis med en rad med streker, der hver strek angir én bokstav. Hvis spilleren som gjetter foreslår en bokstav som finnes i ordet, skriver den andre spilleren denne bokstaven i alle de riktige posisjonene. Hvis bokstaven som foreslås ikke er med i ordet, tegner den andre spilleren ett av elementene i Hangman-diagrammet. -Wikipedia</string>
-    <string name="endre_spraak">Endre Språk</string>
-    <string name="avslutt_spill">Avslutt</string>
+    <string name="se_regler">See Rules</string>
+    <string name="start_spill">Start Game</string>
+    <string name="reglene">Hangman is a game for two people. It is played using a sheet of paper and a pencil. One player thinks of a word (or phrase) and the other trying to find the word by suggesting bokstaver.Ordet one should try to guess the setting is represented by a row of dashes, each bar indicates one letter. If the player who guesses suggest a letter that is in the word, enter the second player this letter in all the right positions. If the letter proposed are not in word, draw the other player one of the elements in Hangman diagram. -Wikipedia</string>
+    <string name="endre_spraak">Change language</string>
+    <string name="avslutt_spill">Quit Game</string>
 </resources>
