--- a/S169954Mappe1-master/app/src/main/res/values-en/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-en/strings.xml
@@ -4,6 +4,9 @@
     <string name="se_regler">See Rules</string>
     <string name="start_spill">Start Game</string>
     <string name="tittel">Hangman game</string>
+    <string name="spraak">Language</string>
+    <string name="tips_knapp">Tips</string>
+    <string name="tips">You may want to start the game by guessing a vowel.</string>
     <string name="reglene">Hangman is a game for two people. It is played using a sheet of paper and a pencil. One player thinks of a word (or phrase) and the other trying to find the word by suggesting bokstaver.Ordet one should try to guess the setting is represented by a row of dashes, each bar indicates one letter. If the player who guesses suggest a letter that is in the word, enter the second player this letter in all the right positions. If the letter proposed are not in word, draw the other player one of the elements in Hangman diagram. -Wikipedia</string>
     <string name="endre_spraak">Change language</string>
     <string name="avslutt_spill">Quit Game</string>
