--- a/S169954Mappe1-master/app/src/main/res/values-nb/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-nb/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hengmann</string>
+    <string name="app_name">Hangman</string>
     <string name="action_settings">Innstillinger</string>
     <string name="se_regler">Se Regler</string>
     <string name="start_spill">Start Spill</string>
