now you can change language anywhere in the app

--- a/S169954Mappe1-master/app/src/main/res/values/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="start_spill">Start Spill</string>
     <string name="tittel">Hangman-spill</string>
     <string name="spraak">Språk</string>
+    <string name="byttspraak">Dette vil endre all tekst i applikasjonen til:</string>
     <string name="norsk">Norsk</string>
     <string name="engelsk">English</string>
     <string name="tysk">Deutsch</string>
