--- a/S169954Mappe1-master/app/src/main/res/values-de/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values-de/strings.xml
@@ -5,6 +5,10 @@
     <string name="start_spill">Spiel Beginnen</string>
     <string name="tittel">Galgenmännchen Spiele</string>
     <string name="spraak">Sprache</string>
+    <string name="byttspraak">Dadurch wird der gesamte Text in der Anwendung zu ändern:</string>
+    <string name="norsk">Norwegisch</string>
+    <string name="engelsk">Englisch</string>
+    <string name="tysk">Deutsch</string>
     <string name="tips_knapp">Tipps</string>
     <string name="tips">Sie können das Spiel durch Erraten einen Vokal beginnen.</string>
     <string name="reglene">Hangman ist ein Spiel für zwei Personen. Es wird mit einem Blatt Papier und einem Bleistift gespielt. Ein Spieler denkt an ein Wort (oder Satz) und der andere versucht, das Wort der Eingabe bokstaver.Ordet sollte man versuchen zu erraten, die Einstellung wird durch eine Reihe von Strichen dargestellt zu finden, jeder Balken zeigt ein Buchstabe. Wenn der Spieler, der errät vorschlagen, einen Brief, in dem Wort ist, geben Sie das zweite Spieler diesen Brief an den richtigen Positionen. Wenn die vorgeschlagene Buchstaben sind nicht in Worten, ziehen die anderen Spieler eines der Elemente in Hangman Diagramm. -Wikipedia</string>
