--- a/S169954Mappe1-master/app/src/main/res/values/strings.xml
+++ b/S169954Mappe1-master/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="reglene">Hangman er et spill for to personer. Det spilles ved hjelp av et papirark og en blyant. Den ene spilleren tenker på et ord (eller uttrykk), og den andre forsøker å finne frem til ordet ved å foreslå bokstaver.Ordet man skal forsøke å gjette seg frem til, angis med en rad med streker, der hver strek angir én bokstav. Hvis spilleren som gjetter foreslår en bokstav som finnes i ordet, skriver den andre spilleren denne bokstaven i alle de riktige posisjonene. Hvis bokstaven som foreslås ikke er med i ordet, tegner den andre spilleren ett av elementene i Hangman-diagrammet. -Wikipedia</string>
     <string name="endre_spraak">Endre Språk</string>
     <string name="avslutt_spill">Avslutt</string>
+
+    <string name="galgen"></string>
+    <string name="hode"></string>
+    <string name="kroppen"></string>
+    <string name="arm1"></string>
+    <string name="arm2"></string>
+    <string name="bein1"></string>
+    <string name="bein2"></string>
 </resources>
